chance from scn to tscn for better VCS abilities

--- a/Test/engine.cfg
+++ b/Test/engine.cfg
@@ -1,7 +1,7 @@
 [application]
 
 name="Test"
-main_scene="res://wip_main_building.scn"
+main_scene="res://wip_main_building.tscn"
 icon="res://icon.png"
 
 [input]
