Added mouse interaction scene that is a WIP and a texture to main level

--- a/engine.cfg
+++ b/engine.cfg
@@ -2,11 +2,12 @@
 
 name="Game"
 main_scene="res://main.tscn"
+icon="res://Images/icon.png"
 auto_accept_quit=true
-icon="res://icon.png"
 
 [input]
 
+ClickAction=[mbutton(0, 1), key(E)]
 movement=[key(W), key(A), key(S), key(D)]
 
 [render]
