added way to exit, binded to Q key

--- a/engine.cfg
+++ b/engine.cfg
@@ -5,6 +5,10 @@ main_scene="res://main.tscn"
 icon="res://Images/icon.png"
 auto_accept_quit=true
 
+[display]
+
+fullscreen=true
+
 [input]
 
 ClickAction=[mbutton(0, 1), key(E)]
