Added object interaction, thanks Karroffel!

--- a/export.cfg
+++ b/export.cfg
@@ -255,17 +255,17 @@ resources/pack_mode=2
 
 application/bits_mode=0
 application/copyright=""
-application/icon=""
+application/icon="res://Images/icon.png"
 application/identifier="org.godotengine.macgame"
 application/info="Made with Godot Engine"
 application/name=""
-application/short_version="1.0"
+application/short_version="0.0.2"
 application/signature="godotmacgame"
-application/version="1.0"
+application/version="0.0.2"
 custom_package/debug=""
 custom_package/release=""
 debug/debugging_enabled=true
-display/high_res=false
+display/high_res=true
 
 [platform:Windows Desktop]
 
