Added an extension to the level. Removed collision box from the front of player. New models and textures.

--- a/engine.cfg
+++ b/engine.cfg
@@ -5,9 +5,20 @@ main_scene="res://main.tscn"
 icon="res://Images/icon.png"
 auto_accept_quit=true
 
+[audio]
+
+driver="PulseAudio"
+
 [debug]
 
 print_fps=true
+
+[display]
+
+driver="GLES2"
+width=1280
+height=720
+use_vsync=true
 
 [input]
 
@@ -16,5 +27,9 @@ movement=[key(W), key(A), key(S), key(D)]
 
 [render]
 
+thread_model=1
+mipmap_policy=0
+thread_textures_prealloc=5
+room_cull_enabled=true
 shadows_enabled=true
 light_discard_enabled=true
