Added chair, optimized player script, added more lighting

--- a/engine.cfg
+++ b/engine.cfg
@@ -5,10 +5,6 @@ main_scene="res://main.tscn"
 icon="res://Images/icon.png"
 auto_accept_quit=true
 
-[audio]
-
-driver="PulseAudio"
-
 [debug]
 
 print_fps=true
@@ -24,6 +20,10 @@ use_vsync=true
 
 ClickAction=[mbutton(0, 1), key(E)]
 movement=[key(W), key(A), key(S), key(D)]
+
+[physics]
+
+default_gravity=15.0
 
 [render]
 
