--- a/export.cfg
+++ b/export.cfg
@@ -1,6 +1,6 @@
 [convert_images]
 
-action="none"
+action="compress_ram"
 compress_quality=0.7
 formats="png"
 shrink=1.0
@@ -273,8 +273,8 @@ binary/64_bits=true
 custom_binary/debug=""
 custom_binary/release=""
 debug/debugging_enabled=true
-resources/bundle_dependencies_(for_optical_disc)=true
-resources/pack_mode=1
+resources/bundle_dependencies_(for_optical_disc)=false
+resources/pack_mode=2
 
 [script]
 
