added loading image

--- a/engine.cfg
+++ b/engine.cfg
@@ -2,6 +2,8 @@
 
 name="Game"
 main_scene="res://main.tscn"
+boot_splash="res://Images/icon.png"
+boot_splash_fullsize=true
 icon="res://Images/icon.png"
 auto_accept_quit=true
 
@@ -27,9 +29,9 @@ default_gravity=15.0
 
 [render]
 
+room_cull_enabled=false
 thread_model=1
 mipmap_policy=0
 thread_textures_prealloc=5
-room_cull_enabled=true
 shadows_enabled=true
 light_discard_enabled=true
