fixed light sources

--- a/engine.cfg
+++ b/engine.cfg
@@ -7,6 +7,10 @@ boot_splash_fullsize=true
 icon="res://Images/icon.png"
 auto_accept_quit=true
 
+[audio]
+
+mix_rate=48000
+
 [debug]
 
 print_fps=true
