Added Menu Screen, global script in preloader, and added variables to control global functions

--- a/engine.cfg
+++ b/engine.cfg
@@ -1,7 +1,7 @@
 [application]
 
 name="Game"
-main_scene="res://main.tscn"
+main_scene="res://Scenes/Menu.tscn"
 boot_splash="res://Images/icon.png"
 boot_splash_fullsize=true
 icon="res://Images/icon.png"
@@ -10,6 +10,10 @@ auto_accept_quit=true
 [audio]
 
 mix_rate=48000
+
+[autoload]
+
+global="*res://Scripts/global.gd"
 
 [debug]
 
