Added apply_impulse, only affects global position

--- a/engine.cfg
+++ b/engine.cfg
@@ -16,6 +16,10 @@ global="*res://Scripts/global.gd"
 
 [debug]
 
+collision_shape_color=#7f0099b2
+collision_contact_color=#ccff3319
+navigation_geometry_color=#6619ffb2
+navigation_disabled_geometry_color=#66ffb219
 print_fps=true
 
 [display]
