Changed Shadow Filter, shadows are still blobby but less pixelated.

--- a/engine.cfg
+++ b/engine.cfg
@@ -24,9 +24,9 @@ print_fps=true
 
 [display]
 
+driver="GLES2"
 stretch_mode="viewport"
 stretch_aspect="keep"
-driver="GLES2"
 width=1280
 height=720
 use_vsync=true
@@ -39,6 +39,11 @@ movement=[key(W), key(A), key(S), key(D)]
 [physics]
 
 default_gravity=15.0
+
+[rasterizer]
+
+shadow_filter=3
+anisotropic_filter_level=4.0
 
 [render]
 
