Made menu resize properly on resolution higher than 720P

--- a/engine.cfg
+++ b/engine.cfg
@@ -24,8 +24,9 @@ print_fps=true
 
 [display]
 
+resizable=true
+stretch_mode="disabled"
 driver="GLES2"
-stretch_mode="viewport"
 stretch_aspect="keep"
 width=1280
 height=720
