changed project settings

--- a/engine.cfg
+++ b/engine.cfg
@@ -43,12 +43,12 @@ default_gravity=15.0
 
 [rasterizer]
 
+anisotropic_filter_level=3.996
 shadow_filter=3
-anisotropic_filter_level=4.0
 
 [render]
 
-room_cull_enabled=false
+room_cull_enabled=true
 thread_model=2
 mipmap_policy=0
 thread_textures_prealloc=5
