Added multiple input maps, made playerscript input configurable, controller support is about 50% done, player_ type input maps created.

--- a/engine.cfg
+++ b/engine.cfg
@@ -30,12 +30,20 @@ driver="GLES2"
 stretch_aspect="keep"
 width=1280
 height=720
-use_vsync=true
 
 [input]
 
+ui_accept=[key(Return), key(Enter), key(Space), jbutton(3, 0)]
+player_left=[key(A), jaxis(0, 0)]
+player_up=[key(W), jaxis(0, 2)]
+player_right=[key(D), jaxis(0, 1)]
+player_down=[key(S), jaxis(0, 3)]
+player_sprint=[key(Shift)]
+player_jump=[key(Space), jbutton(0, 0)]
+player_throw=[mbutton(0, 2)]
+player_grab=[mbutton(0, 1), key(E), jbutton(3, 4)]
+player_look=[]
 ClickAction=[mbutton(0, 1), key(E)]
-movement=[key(W), key(A), key(S), key(D)]
 
 [physics]
 
@@ -49,8 +57,8 @@ shadow_filter=3
 [render]
 
 room_cull_enabled=true
-thread_model=2
+thread_textures_prealloc=2
 mipmap_policy=0
-thread_textures_prealloc=5
+thread_model=2
 shadows_enabled=true
 light_discard_enabled=true
