minor light fixes and added input keys

--- a/engine.cfg
+++ b/engine.cfg
@@ -38,10 +38,10 @@ player_left=[key(A), jaxis(0, 0)]
 player_up=[key(W), jaxis(0, 2)]
 player_right=[key(D), jaxis(0, 1)]
 player_down=[key(S), jaxis(0, 3)]
-player_sprint=[key(Shift)]
+player_sprint=[key(Shift), jbutton(0, 8)]
 player_jump=[key(Space), jbutton(0, 0)]
-player_throw=[mbutton(0, 2)]
-player_grab=[mbutton(0, 1), key(E), jbutton(3, 4)]
+player_throw=[mbutton(0, 2), jbutton(0, 5)]
+player_grab=[mbutton(0, 1), key(E), jbutton(0, 4)]
 player_look=[]
 ClickAction=[mbutton(0, 1), key(E)]
 
