Changed some project settings, changed menu to 3D background, added dynamic lamp

--- a/engine.cfg
+++ b/engine.cfg
@@ -31,6 +31,10 @@ stretch_aspect="keep"
 width=1280
 height=720
 
+[image_loader]
+
+filter=true
+
 [input]
 
 ui_accept=[key(Return), key(Enter), key(Space), jbutton(3, 0)]
@@ -51,14 +55,15 @@ default_gravity=15.0
 
 [rasterizer]
 
-anisotropic_filter_level=1.0
-shadow_filter=3
+blur_buffer_size=256
+luminance_buffer_size=81
+shadow_filter=1
+anisotropic_filter_level=16.0
 
 [render]
 
+mipmap_policy=1
 room_cull_enabled=true
-thread_textures_prealloc=2
-mipmap_policy=0
+light_discard_enabled=false
 thread_model=2
 shadows_enabled=true
-light_discard_enabled=true
