--- a/export.cfg
+++ b/export.cfg
@@ -1,8 +1,8 @@
 [convert_images]
 
 action="compress_ram"
-compress_quality=0.6
-formats="jpeg,png"
+compress_quality=0.5
+formats="jpeg,jpg,png"
 shrink=1.0
 
 [convert_samples]
@@ -259,9 +259,9 @@ application/icon="res://Images/icon.png"
 application/identifier="org.godotengine.macgame"
 application/info="Made with Godot Engine"
 application/name=""
-application/short_version="0.0.5"
+application/short_version="0.0.7"
 application/signature="godotmacgame"
-application/version="0.0.5"
+application/version="0.0.7"
 custom_package/debug=""
 custom_package/release=""
 debug/debugging_enabled=true
