Added new tiles, new sounds, and changed the main level

--- a/engine.cfg
+++ b/engine.cfg
@@ -8,6 +8,9 @@ auto_accept_quit=true
 
 [audio]
 
+mixer_interp="linear"
+stream_volume_scale=1.0
+fx_volume_scale=1.0
 mix_rate=48000
 
 [autoload]
@@ -62,8 +65,8 @@ anisotropic_filter_level=16.0
 
 [render]
 
+room_cull_enabled=false
 mipmap_policy=1
-room_cull_enabled=true
 light_discard_enabled=false
 thread_model=2
 shadows_enabled=true
