Temporarily removed soundfx, upgraded to Godot 2.1.3-STABLE

--- a/engine.cfg
+++ b/engine.cfg
@@ -41,6 +41,7 @@ filter=true
 [input]
 
 ui_accept=[key(Return), key(Enter), key(Space), jbutton(3, 0)]
+player_movement=[key(W)]
 player_left=[key(A), jaxis(0, 0)]
 player_up=[key(W), jaxis(0, 2)]
 player_right=[key(D), jaxis(0, 1)]
