Added ambient light so dark areas are not pitch black.

--- a/engine.cfg
+++ b/engine.cfg
@@ -27,15 +27,17 @@ print_fps=true
 
 [display]
 
+driver="GLES2"
 resizable=true
 stretch_mode="disabled"
-driver="GLES2"
 stretch_aspect="keep"
 width=1280
 height=720
 
 [image_loader]
 
+gen_mipmaps=true
+repeat=true
 filter=true
 
 [input]
@@ -66,8 +68,8 @@ anisotropic_filter_level=16.0
 
 [render]
 
-room_cull_enabled=false
+room_cull_enabled=true
+light_discard_enabled=true
 mipmap_policy=1
-light_discard_enabled=false
 thread_model=2
 shadows_enabled=true
