--- a/engine.cfg
+++ b/engine.cfg
@@ -61,14 +61,14 @@ default_gravity=15.0
 
 [rasterizer]
 
+shadow_filter=3
 blur_buffer_size=256
 luminance_buffer_size=81
-shadow_filter=1
 anisotropic_filter_level=16.0
 
 [render]
 
-room_cull_enabled=true
+room_cull_enabled=false
 light_discard_enabled=true
 mipmap_policy=1
 thread_model=2
