added flashlight, made level a bit more easier

--- a/engine.cfg
+++ b/engine.cfg
@@ -43,6 +43,7 @@ filter=true
 [input]
 
 ui_accept=[key(Return), key(Enter), key(Space), jbutton(3, 0)]
+player_light=[key(F)]
 player_movement=[key(W)]
 player_left=[key(A), jaxis(0, 0)]
 player_up=[key(W), jaxis(0, 2)]
