--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -13,7 +13,7 @@ patch_list=PoolStringArray(  )
 
 texture_format/s3tc=true
 texture_format/etc=false
-texture_format/etc2=true
+texture_format/etc2=false
 binary_format/64_bits=true
 custom_template/release=""
 custom_template/debug=""
@@ -33,12 +33,12 @@ patch_list=PoolStringArray(  )
 
 texture_format/s3tc=true
 texture_format/etc=false
-texture_format/etc2=true
+texture_format/etc2=false
 binary_format/64_bits=true
 custom_template/release=""
 custom_template/debug=""
 application/icon=""
-application/file_version="0.0.8-DEMO"
+application/file_version=""
 application/product_version=""
 application/company_name=""
 application/product_name=""
