--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,47 +1,24 @@
 [preset.0]
 
-name="Linux/X11 [Unoptimized]"
+name="Linux/X11"
 platform="Linux/X11"
 runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
+export_path="/home/aaron/Desktop/wwgame-export/wwgame-0.0.9.x86_64"
 patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
 
 [preset.0.options]
 
+texture_format/bptc=false
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
+texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
 custom_template/release=""
 custom_template/debug=""
-
-[preset.1]
-
-name="Windows Desktop [Unoptimized]"
-platform="Windows Desktop"
-runnable=true
-custom_features=""
-export_filter="all_resources"
-include_filter=""
-exclude_filter=""
-patch_list=PoolStringArray(  )
-
-[preset.1.options]
-
-texture_format/s3tc=true
-texture_format/etc=false
-texture_format/etc2=false
-binary_format/64_bits=true
-custom_template/release=""
-custom_template/debug=""
-application/icon=""
-application/file_version=""
-application/product_version=""
-application/company_name=""
-application/product_name=""
-application/file_description=""
-application/copyright=""
-application/trademarks=""
