--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -22,3 +22,36 @@ texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
 custom_template/release=""
 custom_template/debug=""
+
+[preset.1]
+
+name="Windows Desktop"
+platform="Windows Desktop"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="/home/aaron/Desktop/wwgame-export/wandows/wwgame_0.0.9.exe"
+patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
+
+[preset.1.options]
+
+texture_format/bptc=false
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
+texture_format/no_bptc_fallbacks=true
+binary_format/64_bits=true
+custom_template/release=""
+custom_template/debug=""
+application/icon=""
+application/file_version=""
+application/product_version=""
+application/company_name=""
+application/product_name=""
+application/file_description=""
+application/copyright=""
+application/trademarks=""
