--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -32,7 +32,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="/home/aaron/Desktop/wwgame-export/wandows/wwgame_0.0.9.exe"
+export_path="/home/aaron/Desktop/wwgame_testbuild_20200115.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
