--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="/home/aaron/Desktop/wwgame-export/wwgame-0.0.9.x86_64"
+export_path="../Desktop/wwgame-export/wwgame-0.0.9.x86_64"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -20,6 +20,7 @@ texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
+binary_format/embed_pck=false
 custom_template/release=""
 custom_template/debug=""
 
@@ -32,7 +33,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="/home/aaron/Desktop/wwgame_testbuild_20200115.exe"
+export_path="../Desktop/wwgame_testbuild_20200417.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -45,8 +46,17 @@ texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
+binary_format/embed_pck=true
 custom_template/release=""
 custom_template/debug=""
+codesign/enable=false
+codesign/identity=""
+codesign/password=""
+codesign/timestamp=true
+codesign/timestamp_server_url=""
+codesign/digest_algorithm=1
+codesign/description=""
+codesign/custom_options=PoolStringArray(  )
 application/icon=""
 application/file_version=""
 application/product_version=""
