Added puzzles, along with tutorial puzzle

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -6,8 +6,8 @@ runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
-exclude_filter=""
-export_path="../Desktop/wwgame-export/wwgame-0.0.9.x86_64"
+exclude_filter=".builds/"
+export_path=".builds/linux/wwgame-20200808.x86_64"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -33,7 +33,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Desktop/wwgame-exports/wwgame_testbuild_20200604.exe"
+export_path=".builds/win/wwgame_20200808.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
